--- a/styles.css
+++ b/styles.css
@@ -25,3 +25,17 @@ body, a:link, a:visited, a:active{
   border-radius:10px;
   position:absolute;
 }
+.blinkyDancer{
+  border:10px solid red;
+  border-radius:10px;
+  position:absolute;
+}
+.katanaGuy{
+  position:absolute;
+}
+.kungFuPanda{
+  position:absolute;
+}
+.redGuy{
+  position:absolute;
+}
